# heavydb

./: .buildinfo  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .project  CLA.txt  CMakeLists.txt  CMakePackaging.txt  Doxyfile.in  EULA-CE.txt  ExecuteTest.cpp  FileManager.h  HeavyDB.cpp  LICENSE.md  LeafAggregator.h  MapDBetaGuide.md  MapDGettingStartedGuide.md  MapDGuide.md  MapDHttpServer.cpp  MapDInstallGuide.md  MapDServer.cpp  MapDServer.h  MapDWebServer.go  OPTANE.md  OmniSciWebServer.go  README.md  ROADMAP.md  common.thrift  completion_hints.thrift  csv_import.cpp  db-query-list-nyct1.sql  errors.h  genindex.html  get_git_hash  heavy.thrift  index.html  initdb.cpp  insert_sample_data  (+16 more)
Analyzer/: Analyzer.cpp  Analyzer.h  CMakeLists.txt  RangeTableEntry.cpp  RangeTableEntry.h
ArrowStorage/: ArrowStorage.cpp  ArrowStorage.h  ArrowStorageUtils.cpp  ArrowStorageUtils.h  CMakeLists.txt
Calcite/: CMakeLists.txt  Calcite.cpp  Calcite.h  CalciteJNI.cpp  CalciteJNI.h  SchemaJson.cpp
Catalog/: AlterColumnRecovery.cpp  AlterColumnRecovery.h  AlterColumnShared.h  AuthMetadata.h  CMakeLists.txt  Catalog.cpp  Catalog.h  CatalogFwd.h  CatalogSchemaProvider.cpp  CatalogSchemaProvider.h  ColumnDescriptor.h  CustomExpression.h  DBObject.cpp  DBObject.h  DashboardDescriptor.h  DataframeTableDescriptor.h  DdlCommandExecutor.cpp  DdlCommandExecutor.h  Defs.h  DictDescriptor.h  DumpRestore.cpp  ForeignServer.h  ForeignTable.cpp  ForeignTable.h  FrontendViewDescriptor.h  Grantee.cpp  Grantee.h  LdapServer.h  LinkDescriptor.h  ObjectRoleDescriptor.h  OptionsContainer.h  RWLocks.cpp  RWLocks.h  RefreshTimeCalculator.cpp  RefreshTimeCalculator.h  Role.cpp  Role.h  SessionInfo.cpp  SessionInfo.h  SessionsStore.cpp  (+10 more)
DataMgr/: AbstractBuffer.cpp  AbstractBuffer.h  AbstractBufferMgr.h  AbstractDataMgr.h  AbstractDataProvider.h  ArrayNoneEncoder.h  CMakeLists.txt  ChunkMetadata.h  DataMgr.cpp  DataMgr.h  DataMgrBufferProvider.cpp  DataMgrBufferProvider.h  DataMgrDataProvider.cpp  DataMgrDataProvider.h  DateDaysEncoder.h  Encoder.cpp  Encoder.h  FixedLengthArrayNoneEncoder.h  FixedLengthEncoder.cpp  FixedLengthEncoder.h  GpuMgr.h  HeavyDbAwsSdk.cpp  HeavyDbAwsSdk.h  LockMgr.cpp  LockMgr.h  MemoryLevel.h  MemoryMgr.cpp  MemoryMgr.h  NoneEncoder.h  OmniSciAwsSdk.cpp  OmniSciAwsSdk.h  PMMInfo.h  Pmem.cpp  Pmem.h  StringNoneEncoder.cpp  StringNoneEncoder.h  StringTokDictEncoder.h  coan_out_000001  coan_out_000003
Database/: CMakeLists.txt  Database.cpp  Database.h
Embedded/: CMakeLists.txt  DBETypes.cpp  DBETypes.h  DBEngine.cpp  DBEngine.h  DBEngine.pxd  EmbeddedDbFSITest.cpp  EmbeddedDbTest.cpp  census.py  dbe.pyx  setup.in.py  setup.py
Geospatial/: CMakeLists.txt  ColumnNames.h  Compression.cpp  Compression.h  CompressionRuntime.h  Conversion.h  GDAL.cpp  GDAL.h  GeosValidation.cpp  GeosValidation.h  GeosVersion.cpp  GeosVersion.h  H3Shim.cpp  H3Shim.h  Transforms.h  Types.cpp  Types.h  Utm.h
HeavyIQ/: CMakeLists.txt
IR/: Expr.h  (+11 more)
Import/: ArrowImporter.h  CMakeLists.txt  CopyParams.h  CsvImport.cpp  CsvImport.h  CsvParserUtils.cpp  CsvParserUtils.h  DelimitedParserUtils.cpp  DelimitedParserUtils.h  Importer.cpp  Importer.h  KafkaImporter.cpp  RowToColumnLoader.cpp  RowToColumnLoader.h  StreamImporter.cpp  csv_parser.cpp  csv_parser.hpp  csvparser.c  csvparser.h
ImportExport/: AbstractImporter.h  ArrowImporter.h  CMakeLists.txt  CopyParams.h  DelimitedParserUtils.cpp  DelimitedParserUtils.h  DistributedForeignDataImporter.cpp  DistributedForeignDataImporter.h  ExpressionParser.cpp  ExpressionParser.h  ForeignDataImporter.cpp  ForeignDataImporter.h  GDAL.cpp  GDAL.h  ImportBatchResult.h  ImportUtils.h  Importer.cpp  Importer.h  KafkaImporter.cpp  MetadataColumn.cpp  MetadataColumn.h  QueryExporter.cpp  QueryExporter.h  QueryExporterCSV.cpp  QueryExporterCSV.h  QueryExporterGDAL.cpp  QueryExporterGDAL.h  RasterImporter.cpp  RasterImporter.h  RenderGroupAnalyzer.cpp  RenderGroupAnalyzer.h  RowToColumnLoader.cpp  RowToColumnLoader.h  SourceType.h  StreamImporter.cpp  TypedImportBuffer.h  TypedImportBufferVector.h
LockMgr/: CMakeLists.txt  LegacyLockMgr.h  LockMgr.cpp  LockMgr.h  LockMgrImpl.h  TableLockMgr.h
MigrationMgr/: CMakeLists.txt  MigrationMgr.cpp  MigrationMgr.h
NvidiaComputeCapability/: CMakeLists.txt  get_nvidia_compute_capability.cpp
Parser/: .ParserNode.h.swp  .parser.y.swp  .scanner.l.swp  CMakeLists.txt  FlexLexer_wnd.h  LegacyParserSkeleton.h  MTSQLParser.h  ParseDDL.h  ParserNode.cpp  ParserNode.h  ParserWrapper.cpp  ParserWrapper.h  Parser_wnd_pregen.cpp  ReservedKeywords.h  Scanner_wnd_pregen.cpp  TargetValueConverters.h  TargetValueConvertersFactories.h  TrackedPtr.h  coan_out_000002  parser.y  parser_wnd_pregen.h  scanner.l
QueryEngine/: AggMode.h  AggregateUtils.h  AggregatedColRange.cpp  AggregatedColRange.h  ArithmeticIR.cpp  ArrayIR.cpp  ArrayOps.cpp  ArrowResultSet.cpp  ArrowResultSet.h  ArrowResultSetConverter.cpp  ArrowUtil.cpp  ArrowUtil.h  AutomaticIRMetadataGuard.h  BaselineJoinHashTable.cpp  BaselineJoinHashTable.h  BitmapGenerators.cpp  BitmapGenerators.h  BufferCompaction.h  BufferEntryUtils.h  CMakeLists.txt  CacheInvalidator.h  CalciteAdapter.cpp  CalciteAdapter.h  CalciteDeserializerUtils.cpp  CalciteDeserializerUtils.h  CardinalityEstimator.cpp  CardinalityEstimator.h  CartesianProduct.h  CaseIR.cpp  CastIR.cpp  CgenState.cpp  CgenState.h  CodeCache.h  CodeCacheAccessor.cpp  CodeCacheAccessor.h  CodeGenerator.h  Codec.cpp  Codec.h  CodegenHelper.cpp  CodegenHelper.h  (+329 more)
QueryRunner/: CMakeLists.txt  ParserUtils.cpp  QueryRunner.cpp  QueryRunner.h  TestProcessSignalHandler.cpp  TestProcessSignalHandler.h
RuntimeLibManager/: CMakeLists.txt  RuntimeLibManager.cpp  RuntimeLibManager.h
SQLFrontend/: CMakeLists.txt  ClientContext.h  CommandDeterminant.h  CommandFunctors.h  CommandHistoryFile.h  CommandResolutionChain.h  InputTokenizers.h  MetaClientContext.h  RegexSupport.h  ThriftOps.h  ThriftService.h  ThriftWithRetry.h  heavysql.cpp  linenoise.cpp  mapdql.cpp  omniql.cpp  omnisql.cpp  socket_functions.cpp  socket_functions.h
(+7832 files in other folders)
